--- a/src/main/resources/templates/admin/category/list.html
+++ b/src/main/resources/templates/admin/category/list.html
@@ -49,6 +49,7 @@
 
 <div th:replace="partials/plugins :: plugins" style="display: none;"></div>
 <!-- Custom js for this page-->
+<script src="/js/admin/category/list.js"></script>
 <!-- End custom js for this page-->
 
 </body>
