--- a/src/main/resources/templates/partials/config.html
+++ b/src/main/resources/templates/partials/config.html
@@ -7,16 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>타이틀</title>
         <!-- plugins:css -->
-        <link rel="stylesheet" href="/vendors/feather/feather.css">
-        <link rel="stylesheet" href="/vendors/ti-icons/css/themify-icons.css">
-        <link rel="stylesheet" href="/vendors/css/vendor.bundle.base.css">
+        <link rel="stylesheet" href="/template/vendors/feather/feather.css">
+        <link rel="stylesheet" href="/template/vendors/ti-icons/css/themify-icons.css">
+        <link rel="stylesheet" href="/template/vendors/css/vendor.bundle.base.css">
         <!-- endinject -->
         <!-- Plugin css for this page -->
         <!-- End plugin css for this page -->
         <!-- inject:css -->
-        <link rel="stylesheet" href="/css/vertical-layout-light/style.css">
+        <link rel="stylesheet" href="/template/css/vertical-layout-light/style.css">
         <!-- endinject -->
-        <link rel="shortcut icon" href="/images/favicon.png" />
+        <link rel="shortcut icon" href="/template/images/favicon.png" />
         <link rel="stylesheet" href="https://uicdn.toast.com/grid/latest/tui-grid.css" />
     </head>
 
@@ -135,7 +135,7 @@
                 </div>
                 <ul class="chat-list">
                     <li class="list active">
-                        <div class="profile"><img src="/images/faces/face1.jpg" alt="image"><span class="online"></span></div>
+                        <div class="profile"><img src="/template/images/faces/face1.jpg" alt="image"><span class="online"></span></div>
                         <div class="info">
                             <p>Thomas Douglas</p>
                             <p>Available</p>
@@ -143,7 +143,7 @@
                         <small class="text-muted my-auto">19 min</small>
                     </li>
                     <li class="list">
-                        <div class="profile"><img src="/images/faces/face2.jpg" alt="image"><span class="offline"></span></div>
+                        <div class="profile"><img src="/template/images/faces/face2.jpg" alt="image"><span class="offline"></span></div>
                         <div class="info">
                             <div class="wrapper d-flex">
                                 <p>Catherine</p>
@@ -154,7 +154,7 @@
                         <small class="text-muted my-auto">23 min</small>
                     </li>
                     <li class="list">
-                        <div class="profile"><img src="/images/faces/face3.jpg" alt="image"><span class="online"></span></div>
+                        <div class="profile"><img src="/template/images/faces/face3.jpg" alt="image"><span class="online"></span></div>
                         <div class="info">
                             <p>Daniel Russell</p>
                             <p>Available</p>
@@ -162,7 +162,7 @@
                         <small class="text-muted my-auto">14 min</small>
                     </li>
                     <li class="list">
-                        <div class="profile"><img src="/images/faces/face4.jpg" alt="image"><span class="offline"></span></div>
+                        <div class="profile"><img src="/template/images/faces/face4.jpg" alt="image"><span class="offline"></span></div>
                         <div class="info">
                             <p>James Richardson</p>
                             <p>Away</p>
@@ -170,7 +170,7 @@
                         <small class="text-muted my-auto">2 min</small>
                     </li>
                     <li class="list">
-                        <div class="profile"><img src="/images/faces/face5.jpg" alt="image"><span class="online"></span></div>
+                        <div class="profile"><img src="/template/images/faces/face5.jpg" alt="image"><span class="online"></span></div>
                         <div class="info">
                             <p>Madeline Kennedy</p>
                             <p>Available</p>
@@ -178,7 +178,7 @@
                         <small class="text-muted my-auto">5 min</small>
                     </li>
                     <li class="list">
-                        <div class="profile"><img src="/images/faces/face6.jpg" alt="image"><span class="online"></span></div>
+                        <div class="profile"><img src="/template/images/faces/face6.jpg" alt="image"><span class="online"></span></div>
                         <div class="info">
                             <p>Sarah Graves</p>
                             <p>Available</p>
