--- a/src/main/resources/templates/partials/plugins.html
+++ b/src/main/resources/templates/partials/plugins.html
@@ -3,15 +3,15 @@
 
 <div  th:fragment="plugins">
     <!-- plugins:js -->
-    <script src="/vendors/js/vendor.bundle.base.js"></script>
+    <script src="/template/vendors/js/vendor.bundle.base.js"></script>
     <script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
     <!-- endinject -->
     <!-- inject:js -->
-    <script src="/js/off-canvas.js"></script>
-    <script src="/js/hoverable-collapse.js"></script>
-    <script src="/js/template.js"></script>
-    <script src="/js/settings.js"></script>
-    <script src="/js/todolist.js"></script>
+    <script src="/template/js/off-canvas.js"></script>
+    <script src="/template/js/hoverable-collapse.js"></script>
+    <script src="/template/js/template.js"></script>
+    <script src="/template/js/settings.js"></script>
+    <script src="/template/js/todolist.js"></script>
     <!-- endinject -->
 </div>
 </html>
