jsp와 thymeleaf 동시에 되게 설정

--- a/src/main/resources/templates/admin/category/list.html
+++ b/src/main/resources/templates/admin/category/list.html
@@ -25,7 +25,7 @@
                 <div class="row">
                   <div class="col-10 card-title">카테고리 목록</div>
                   <div class="col-2">
-                    <button type="button" class="float-right btn btn-inverse-primary btn-fw">글 작성</button>
+                    <button type="button" class="float-right btn btn-inverse-primary btn-fw">카테고리 추가</button>
                   </div>
                 </div>
                 <div class="row">
