--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -18,7 +18,7 @@
                             <div class="badge  badge-warning">필수</div>
                             표시 되어있는건 필수 정보입니다.
                         </h6>
-                        <form class="pt-3">
+                        <form class="pt-3" action="/join.do" method="post">
                             <div class="form-group">
                                 <label for="id">
                                     <div class="badge  badge-warning">필수</div>
@@ -54,6 +54,7 @@
                                     이메일</label>
                                 <input type="email" class="form-control form-control-lg" id="email" placeholder="이메일">
                             </div>
+                            <!--
                             <div class="mb-4">
                                 <div class="form-check">
                                     <label class="form-check-label text-muted">
@@ -62,6 +63,7 @@
                                     </label>
                                 </div>
                             </div>
+                            -->
                             <div class="mt-3">
                                 <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn"
                                    href="/join.do">회원가입</button>
