--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -18,41 +18,47 @@
                             <div class="badge  badge-warning">필수</div>
                             표시 되어있는건 필수 정보입니다.
                         </h6>
-                        <form class="pt-3" action="/join.do" method="post">
+                        <form class="pt-3" action="/join/form.do" method="post" th:object="${user}">
                             <div class="form-group">
                                 <label for="id">
                                     <div class="badge  badge-warning">필수</div>
                                     아이디</label>
-                                <input type="text" class="form-control form-control-lg" id="id" placeholder="아이디">
+                                <input type="text" class="form-control form-control-lg" th:field="*{id}" placeholder="아이디">
                             </div>
                             <div class="form-group">
                                 <label for="pw">
                                     <div class="badge  badge-warning">필수</div>
                                     비밀번호</label>
-                                <input type="text" class="form-control form-control-lg" id="pw" placeholder="비밀번호">
+                                <input type="text" class="form-control form-control-lg"  th:field="*{pw}" placeholder="비밀번호">
                             </div>
                             <div class="form-group">
                                 <label for="pwCheck">
                                     <div class="badge  badge-warning">필수</div>
                                     비밀번호 확인</label>
-                                <input type="text" class="form-control form-control-lg" id="pwCheck"
+                                <input type="text" class="form-control form-control-lg"   id="pwCheck"
                                        placeholder="비밀번호 확인">
                             </div>
                             <div class="form-group">
                                 <label for="name">이름</label>
-                                <input type="text" class="form-control form-control-lg" id="name" placeholder="이름">
+                                <input type="text" class="form-control form-control-lg"  th:field="*{name}" placeholder="이름">
                             </div>
                             <div class="form-group">
                                 <label for="nickname">
                                     <div class="badge  badge-warning">필수</div>
                                     닉네임</label>
-                                <input type="text" class="form-control form-control-lg" id="nickname" placeholder="닉네임">
+                                <input type="text" class="form-control form-control-lg"  th:field="*{nickname}"placeholder="닉네임">
+                            </div>
+                            <div class="form-group">
+                                <label for="phone">
+                                    <div class="badge  badge-warning">필수</div>
+                                    핸드폰번호</label>
+                                <input type="text" class="form-control form-control-lg" th:field="*{phone}" placeholder="01012345678">
                             </div>
                             <div class="form-group">
                                 <label for="email">
                                     <div class="badge  badge-warning">필수</div>
                                     이메일</label>
-                                <input type="email" class="form-control form-control-lg" id="email" placeholder="이메일">
+                                <input type="email" class="form-control form-control-lg"  th:field="*{email}" placeholder="이메일">
                             </div>
                             <!--
                             <div class="mb-4">
@@ -88,7 +94,7 @@
     /**
      * 아이디 중복체크
      */
-    document.getElementById("id").addEventListener('keyup', function () {
+    document.getElementById("id").addEventListener('input', function () {
         const userId = document.getElementById("id").value;
         if (userId.length > 1) {
             fetch('/join/check/id/' + userId)
@@ -127,7 +133,7 @@
     /**
      * 이메일 중복체크
      */
-    document.getElementById("email").addEventListener('keyup', function () {
+    document.getElementById("email").addEventListener('input', function () {
         const userEmail = document.getElementById("email").value;
         //정규식
         const emailReg = /.+@[a-zA-Z]+(\.[a-zA-Z]+){1,2}/g;
