--- a/src/main/resources/templates/user/authentication.html
+++ b/src/main/resources/templates/user/authentication.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+
+<head th:replace="partials/config :: head"></head>
+
 <body>
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper">
+        <div class="content-wrapper d-flex align-items-center auth px-0">
+            <div class="row w-100 mx-0">
+                <div class="col-lg-4 mx-auto">
+                    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                        <div class="brand-logo">
+                            <img src="/template/images/logo.svg" alt="logo">
+                        </div>
+                        <h4>인증번호 입력하기</h4>
+                        <h6 class="font-weight-light">
+                            이메일로 보내드린 인증번호를 입력하세요.
+                        </h6>
+                        <form class="pt-3" action="/join/authentication.do" method="post">
+                            <div class="form-group">
+                                <label for="id">인증번호</label>
+                                <input type="text" class="form-control form-control-lg" id="emailKey" name="emailKey" placeholder="인증번호">
+                            </div>
+                            <div class="mt-3">
+                                <button type="submit" class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">인증하기</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- content-wrapper ends -->
+    </div>
+    <!-- page-body-wrapper ends -->
+</div>
+<!-- container-scroller -->
+
+<div th:replace="partials/plugins :: plugins" style="display: none;"></div>
+<!-- Custom js for this page-->
+<script type="text/javascript">
+
+</script>
+<!-- End custom js for this page-->
 
 </body>
+
 </html>
