--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,61 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html th:replace="~{partials/layoutUser :: layout(~{::title}, ~{::form}, ~{::h4}, ~{::h6})}"
+      xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="partials/config :: head"></head>
+<head>
+    <title>
+        로그인
+    </title>
+</head>
 
 <body>
-  <div class="container-scroller">
-    <div class="container-fluid page-body-wrapper full-page-wrapper">
-      <div class="content-wrapper d-flex align-items-center auth px-0">
-        <div class="row w-100 mx-0">
-          <div class="col-lg-4 mx-auto">
-            <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-              <div class="brand-logo">
-                <img src="/template/images/logo.svg" alt="logo">
-              </div>
-              <h4>Hello! let's get started</h4>
-              <h6 class="font-weight-light">Sign in to continue.</h6>
-              <form class="pt-3">
-                <div class="form-group">
-                  <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
-                </div>
-                <div class="form-group">
-                  <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="mt-3">
-                  <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="/template/index.html">SIGN IN</a>
-                </div>
-                <div class="my-2 d-flex justify-content-between align-items-center">
-                  <div class="form-check">
-                    <label class="form-check-label text-muted">
-                      <input type="checkbox" class="form-check-input">
-                      Keep me signed in
-                    </label>
-                  </div>
-                  <a href="#" class="auth-link text-black">Forgot password?</a>
-                </div>
-                <div class="mb-2">
-                  <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                    <i class="ti-facebook mr-2"></i>Connect using facebook
-                  </button>
-                </div>
-                <div class="text-center mt-4 font-weight-light">
-                  Don't have an account? <a href="register.html" class="text-primary">Create</a>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- content-wrapper ends -->
-    </div>
-    <!-- page-body-wrapper ends -->
-  </div>
-  <!-- container-scroller -->
 
-  <div th:replace="partials/plugins :: plugins" style="display: none;"></div>
-  <!-- Custom js for this page-->
-  <!-- End custom js for this page-->
+<h4>로그인</h4>
+<h6 class="font-weight-light">자신의 계정으로 로그인하세요.</h6>
+<form class="pt-3" th:object="${user}">
+    <div class="form-group">
+        <input type="text" class="form-control form-control-lg" th:field="*{id}" placeholder="Id">
+    </div>
+    <div class="form-group">
+        <input type="password" class="form-control form-control-lg" th:field="*{pw}" placeholder="Password">
+    </div>
+    <div class="mt-3">
+        <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" href="/template/index.html">
+            로그인
+        </a>
+    </div>
+    <!--
+    <div class="my-2 d-flex justify-content-between align-items-center">
+        <div class="form-check">
+            <label class="form-check-label text-muted">
+                <input type="checkbox" class="form-check-input">
+                Keep me signed in
+            </label>
+        </div>
+        <a href="#" class="auth-link text-black">Forgot password?</a>
+    </div>
+    <div class="mb-2">
+        <button type="button" class="btn btn-block btn-facebook auth-form-btn">
+            <i class="ti-facebook mr-2"></i>Connect using facebook
+        </button>
+    </div>
+    -->
+    <div class="text-center mt-4 font-weight-light">
+        계정이 없으신가요?<a href="/join/form.do" class="text-primary">회원가입</a>
+    </div>
+</form>
 
 </body>
 
