--- a/src/main/resources/templates/partials/layoutMain.html
+++ b/src/main/resources/templates/partials/layoutMain.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
-<html th:fragment="layout (title, content)" xmlns:th="http://www.thymeleaf.org">
+<html th:fragment="layout (title, content, script)" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title th:replace="${title}">레이아웃 타이틀</title>
-    <!-- plugins:css -->
-    <link rel="stylesheet" href="/template/vendors/feather/feather.css">
-    <link rel="stylesheet" href="/template/vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" href="/template/vendors/css/vendor.bundle.base.css">
-    <!-- endinject -->
-    <!-- Plugin css for this page -->
-    <link rel="stylesheet" href="/template/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-    <link rel="stylesheet" href="/template/vendors/ti-icons/css/themify-icons.css">
-    <link rel="stylesheet" type="text/css" href="/template/js/select.dataTables.min.css">
-    <!-- End plugin css for this page -->
-    <!-- inject:css -->
-    <link rel="stylesheet" href="/template/css/vertical-layout-light/style.css">
-    <!-- endinject -->
-    <link rel="shortcut icon" href="/template/images/favicon.png" />
-</head>
+<head th:replace="partials/head :: head(${title})"></head>
 <body>
 <div class="container-scroller">
     <!-- partial:partials/_navbar.html -->
@@ -46,54 +27,54 @@
                 </li>
             </ul>
             <ul class="navbar-nav navbar-nav-right">
-                <li class="nav-item dropdown">
-                    <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="/template/#" data-toggle="dropdown">
-                        <i class="icon-bell mx-0"></i>
-                        <span class="count"></span>
-                    </a>
-                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
-                        <p class="mb-0 font-weight-normal float-left dropdown-header">Notifications</p>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-success">
-                                    <i class="ti-info-alt mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <h6 class="preview-subject font-weight-normal">Application Error</h6>
-                                <p class="font-weight-light small-text mb-0 text-muted">
-                                    Just now
-                                </p>
-                            </div>
-                        </a>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-warning">
-                                    <i class="ti-settings mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <h6 class="preview-subject font-weight-normal">Settings</h6>
-                                <p class="font-weight-light small-text mb-0 text-muted">
-                                    Private message
-                                </p>
-                            </div>
-                        </a>
-                        <a class="dropdown-item preview-item">
-                            <div class="preview-thumbnail">
-                                <div class="preview-icon bg-info">
-                                    <i class="ti-user mx-0"></i>
-                                </div>
-                            </div>
-                            <div class="preview-item-content">
-                                <h6 class="preview-subject font-weight-normal">New user registration</h6>
-                                <p class="font-weight-light small-text mb-0 text-muted">
-                                    2 days ago
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </li>
+<!--                <li class="nav-item dropdown">-->
+<!--                    <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="/template/#" data-toggle="dropdown">-->
+<!--                        <i class="icon-bell mx-0"></i>-->
+<!--                        <span class="count"></span>-->
+<!--                    </a>-->
+<!--                    <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">-->
+<!--                        <p class="mb-0 font-weight-normal float-left dropdown-header">Notifications</p>-->
+<!--                        <a class="dropdown-item preview-item">-->
+<!--                            <div class="preview-thumbnail">-->
+<!--                                <div class="preview-icon bg-success">-->
+<!--                                    <i class="ti-info-alt mx-0"></i>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="preview-item-content">-->
+<!--                                <h6 class="preview-subject font-weight-normal">Application Error</h6>-->
+<!--                                <p class="font-weight-light small-text mb-0 text-muted">-->
+<!--                                    Just now-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                        <a class="dropdown-item preview-item">-->
+<!--                            <div class="preview-thumbnail">-->
+<!--                                <div class="preview-icon bg-warning">-->
+<!--                                    <i class="ti-settings mx-0"></i>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="preview-item-content">-->
+<!--                                <h6 class="preview-subject font-weight-normal">Settings</h6>-->
+<!--                                <p class="font-weight-light small-text mb-0 text-muted">-->
+<!--                                    Private message-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                        <a class="dropdown-item preview-item">-->
+<!--                            <div class="preview-thumbnail">-->
+<!--                                <div class="preview-icon bg-info">-->
+<!--                                    <i class="ti-user mx-0"></i>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="preview-item-content">-->
+<!--                                <h6 class="preview-subject font-weight-normal">New user registration</h6>-->
+<!--                                <p class="font-weight-light small-text mb-0 text-muted">-->
+<!--                                    2 days ago-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </li>-->
                 <li class="nav-item nav-profile dropdown">
                     <a class="nav-link dropdown-toggle" href="/template/#" data-toggle="dropdown" id="profileDropdown">
                         <img src="/template/images/faces/face28.jpg" alt="profile"/>
@@ -101,19 +82,27 @@
                     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
                         <a class="dropdown-item">
                             <i class="ti-settings text-primary"></i>
-                            Settings
+                            마이페이지
                         </a>
                         <a class="dropdown-item">
                             <i class="ti-power-off text-primary"></i>
-                            Logout
+                            로그아웃
+                        </a>
+                        <a class="dropdown-item">
+                            <i class="ti-settings text-primary"></i>
+                            회원가입
+                        </a>
+                        <a class="dropdown-item">
+                            <i class="ti-power-off text-primary"></i>
+                            로그인
                         </a>
                     </div>
                 </li>
-                <li class="nav-item nav-settings d-none d-lg-flex">
-                    <a class="nav-link" href="/template/#">
-                        <i class="icon-ellipsis"></i>
-                    </a>
-                </li>
+<!--                <li class="nav-item nav-settings d-none d-lg-flex">-->
+<!--                    <a class="nav-link" href="">-->
+<!--                        <i class="icon-ellipsis"></i>-->
+<!--                    </a>-->
+<!--                </li>-->
             </ul>
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
                 <span class="icon-menu"></span>
@@ -298,109 +287,29 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/template/index.html">
                         <i class="icon-grid menu-icon"></i>
-                        <span class="menu-title">Dashboard</span>
+                        <span class="menu-title">1</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+                    <a class="nav-link" data-toggle="collapse" aria-expanded="false" aria-controls="ui-basic">
                         <i class="icon-layout menu-icon"></i>
-                        <span class="menu-title">UI Elements</span>
+                        <span class="menu-title">22</span>
                         <i class="menu-arrow"></i>
                     </a>
                     <div class="collapse" id="ui-basic">
                         <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/ui-features/buttons.html">Buttons</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/ui-features/typography.html">Typography</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/template/pages/ui-features/buttons.html">3</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/template/pages/ui-features/dropdowns.html">4</a></li>
+                            <li class="nav-item"> <a class="nav-link" href="/template/pages/ui-features/typography.html">5</a></li>
                         </ul>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#form-elements" aria-expanded="false" aria-controls="form-elements">
-                        <i class="icon-columns menu-icon"></i>
-                        <span class="menu-title">Form elements</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="form-elements">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="/template/pages/forms/basic_elements.html">Basic Elements</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#charts" aria-expanded="false" aria-controls="charts">
-                        <i class="icon-bar-graph menu-icon"></i>
-                        <span class="menu-title">Charts</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="charts">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/charts/chartjs.html">ChartJs</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#tables" aria-expanded="false" aria-controls="tables">
-                        <i class="icon-grid-2 menu-icon"></i>
-                        <span class="menu-title">Tables</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="tables">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/tables/basic-table.html">Basic table</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#icons" aria-expanded="false" aria-controls="icons">
-                        <i class="icon-contract menu-icon"></i>
-                        <span class="menu-title">Icons</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="icons">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/icons/mdi.html">Mdi icons</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#auth" aria-expanded="false" aria-controls="auth">
-                        <i class="icon-head menu-icon"></i>
-                        <span class="menu-title">User Pages</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="auth">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/samples/login.html"> Login </a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/samples/register.html"> Register </a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="collapse" href="/template/#error" aria-expanded="false" aria-controls="error">
-                        <i class="icon-ban menu-icon"></i>
-                        <span class="menu-title">Error pages</span>
-                        <i class="menu-arrow"></i>
-                    </a>
-                    <div class="collapse" id="error">
-                        <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/samples/error-404.html"> 404 </a></li>
-                            <li class="nav-item"> <a class="nav-link" href="/template/pages/samples/error-500.html"> 500 </a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/template/pages/documentation/documentation.html">
-                        <i class="icon-paper menu-icon"></i>
-                        <span class="menu-title">Documentation</span>
-                    </a>
                 </li>
             </ul>
         </nav>
         <!-- partial -->
-        <div th:replace="${content}">
-
-
+        <div class="main-panel">
+            <div th:replace="${content}"></div>
+            <footer th:replace="partials/footer :: footer" footer></footer>
         </div>
     </div>
     <!-- page-body-wrapper ends -->
@@ -410,5 +319,6 @@
 <div th:replace="partials/plugins :: plugins" style="display: none;"></div>
 <!-- Custom js for this page-->
 <!-- End custom js for this page-->
+<script type="text/javascript" th:replace="${script}"></script>
 </body>
 </html>
