--- a/src/main/resources/templates/partials/plugins.html
+++ b/src/main/resources/templates/partials/plugins.html
@@ -3,9 +3,17 @@
 
 <div  th:fragment="plugins">
     <!-- plugins:js -->
+<!--    <script src="/template/vendors/jquery/jquery-3.6.0.min.js"></script>-->
+<!--    <script src="/template/vendors/bootstrap-4.0.0-dist/js/bootstrap.js"></script>-->
     <script src="/template/vendors/js/vendor.bundle.base.js"></script>
-    <script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
     <!-- endinject -->
+    <!-- Plugin js for this page -->
+    <script src="/template/vendors/chart.js/Chart.min.js"></script>
+    <script src="/template/vendors/datatables.net/jquery.dataTables.js"></script>
+    <script src="/template/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+    <script src="https://uicdn.toast.com/grid/latest/tui-grid.js"></script>
+    <script src="/template/js/dataTables.select.min.js"></script>
+    <!-- End plugin js for this page -->
     <!-- inject:js -->
     <script src="/template/js/off-canvas.js"></script>
     <script src="/template/js/hoverable-collapse.js"></script>
@@ -13,5 +21,6 @@
     <script src="/template/js/settings.js"></script>
     <script src="/template/js/todolist.js"></script>
     <!-- endinject -->
+
 </div>
 </html>
