--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -15,25 +15,24 @@
     <div class="badge  badge-warning">필수</div>
     표시 되어있는건 필수 정보입니다.
 </h6>
-<form class="pt-3" action="/join/form.do" method="post" th:object="${user}">
+<form class="pt-3" action="/join/form.do" method="post" th:object="${user}" th:onsubmit="return checkForm()">
     <div class="form-group">
         <label for="id">
             <div class="badge  badge-warning">필수</div>
             아이디</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{id}" placeholder="아이디">
+        <input type="text" class="form-control form-control-lg" th:field="*{id}" placeholder="아이디" required>
     </div>
     <div class="form-group">
         <label for="pw">
             <div class="badge  badge-warning">필수</div>
             비밀번호</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{pw}" placeholder="비밀번호">
+        <input type="text" class="form-control form-control-lg" th:field="*{pw}" placeholder="비밀번호" required>
     </div>
     <div class="form-group">
         <label for="pwCheck">
             <div class="badge  badge-warning">필수</div>
             비밀번호 확인</label>
-        <input type="text" class="form-control form-control-lg" id="pwCheck"
-               placeholder="비밀번호 확인">
+        <input type="text" class="form-control form-control-lg" id="pwCheck" placeholder="비밀번호 확인" required>
     </div>
     <div class="form-group">
         <label for="name">이름</label>
@@ -43,19 +42,19 @@
         <label for="nickname">
             <div class="badge  badge-warning">필수</div>
             닉네임</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{nickname}" placeholder="닉네임">
+        <input type="text" class="form-control form-control-lg" th:field="*{nickname}" placeholder="닉네임" required>
     </div>
     <div class="form-group">
         <label for="phone">
             <div class="badge  badge-warning">필수</div>
             핸드폰번호</label>
-        <input type="text" class="form-control form-control-lg" th:field="*{phone}" placeholder="01012345678">
+        <input type="text" class="form-control form-control-lg" th:field="*{phone}" placeholder="01012345678" required>
     </div>
     <div class="form-group">
         <label for="email">
             <div class="badge  badge-warning">필수</div>
             이메일</label>
-        <input type="email" class="form-control form-control-lg" th:field="*{email}" placeholder="이메일">
+        <input type="email" class="form-control form-control-lg" th:field="*{email}" placeholder="이메일" required>
     </div>
     <!--
     <div class="mb-4">
@@ -79,86 +78,88 @@
 <!-- container-scroller -->
 <!-- Custom js for this page-->
 <script type="text/javascript">
+    //check하는 api 호출
+    function checkAPI(searchType, searchData) {
+
+        fetch('/join/check/'+searchType+'/' + searchData)
+            .then((response) => {
+                if (!response.ok) {
+                    console.log("response.status 오류");
+                    throw new Error("Failed with HTTP code " + response.status);
+                }
+                return response.json();
+            })
+            .then((result) => {
+                if (!!document.getElementById("resText"+ searchType)) {
+                    document.getElementById("resText"+ searchType).remove();
+                }
+                if (!!document.getElementById("res"+ searchType)) {
+                    document.getElementById("res"+ searchType).remove();
+                }
+                const resultText = document.createElement('div');
+                const resultTag = document.createElement('div');
+                if (result) {
+                    resultText.textContent = '사용할 수 있는 아이디 입니다.';
+                    resultText.classList.add("text-success");
+                    resultTag.textContent='1';
+                } else {
+                    resultText.textContent = '사용할 수 없는 아이디 입니다.';
+                    resultText.classList.add("text-danger");
+                    resultTag.textContent='0';
+                }
+                resultTag.id="res"+ searchType;
+                resultTag.style = "display:none;";
+                resultText.id = "resText"+ searchType;
+                document.getElementById(searchType).parentElement.appendChild(resultTag);
+                document.getElementById(searchType).parentElement.appendChild(resultText);
+                return result;
+            })
+            .catch((error) => {
+                console.log(error);
+            });
+    }
+
+
     /**
      * 아이디 중복체크
      */
-    document.getElementById("id").addEventListener('input', function () {
+    function checkId(){
         const userId = document.getElementById("id").value;
-        if (userId.length > 1) {
-            fetch('/join/check/id/' + userId)
-                .then((response) => {
-                    if (!response.ok) {
-                        console.log("response.status 오류");
-                        throw new Error("Failed with HTTP code " + response.status);
-                    }
-                    return response.json();
-                })
-                .then((result) => {
 
-                    if (!!document.getElementById("resId")) {
-                        document.getElementById("resId").remove();
-                    }
-                    const resultTag = document.createElement('p');
-                    if (result) {
-                        resultTag.textContent = '사용할 수 있는 아이디 입니다.';
-                        resultTag.classList.add("text-success");
-                    } else {
-                        resultTag.textContent = '사용할 수 없는 아이디 입니다.';
-                        resultTag.classList.add("text-danger");
-                    }
-                    resultTag.id = "resId";
-                    document.getElementById("id").parentElement.appendChild(resultTag);
-                })
-                .catch((error) => {
-                    console.log(error);
-                });
+        if (userId.length > 1) {
+            checkAPI('id', userId);
         } else {
             if (!!document.getElementById("resId")) {
                 document.getElementById("resId").remove();
             }
         }
+    }
+
+    // 이벤트 걸기
+    document.getElementById("id").addEventListener('input', function () {
+        checkId();
     });
+
     /**
      * 이메일 중복체크
      */
-    document.getElementById("email").addEventListener('input', function () {
+    function checkEmail() {
         const userEmail = document.getElementById("email").value;
-        //정규식
-        const emailReg = /.+@[a-zA-Z]+(\.[a-zA-Z]+){1,2}/g;
 
-        if (emailReg.test(userEmail)) {
-            fetch('/join/check/email/' + userEmail)
-                .then((response) => {
-                    if (!response.ok) {
-                        console.log("response.status 오류");
-                        throw new Error("Failed with HTTP code " + response.status);
-                    }
-                    return response.json();
-                })
-                .then((result) => {
+        const checkEmail = new RegExp(checkEmailReg);
+        if (checkEmail.test(userEmail)) {
 
-                    if (!!document.getElementById("resEmail")) {
-                        document.getElementById("resEmail").remove();
-                    }
-                    const resultTag = document.createElement('p');
-                    if (result) {
-                        resultTag.textContent = '사용할 수 있는 이메일 입니다.';
-                        resultTag.classList.add("text-success");
-                    } else {
-                        resultTag.textContent = '사용할 수 없는 이메일 입니다.';
-                        resultTag.classList.add("text-danger");
-                    }
-                    resultTag.id = "resEmail";
-                    document.getElementById("email").parentElement.appendChild(resultTag);
-                })
-                .catch((error) => {
-                    console.log(error);
-                });
+            checkAPI('email', userEmail);
+
         } else {
             if (!!document.getElementById("resEmail")) {
                 document.getElementById("resEmail").remove();
             }
         }
+    }
+
+    document.getElementById("email").addEventListener('input', function () {
+        checkEmail();
     });
 
     /**
@@ -179,16 +180,21 @@
 
         const pw = document.getElementById("pw").value;
         const pwCheck = document.getElementById("pwCheck").value;
-        const pwReg = /(?=.*[A-Za-z])(?=.*\d)(?=.*[$@$!%*#?&])[A-Za-z\d$@$!%*#?&]{8,}/g;
 
+        let result_pw = false;
+        let result_pwCheck = false;
+
+        //비밀번호 규칙
         if (!!document.getElementById("resPw")) {
             document.getElementById("resPw").remove();
         }
         if (pw.length > 1) {
-            const resultPwTag = document.createElement('p');
-            if (pwReg.test(pw)) {
+            const resultPwTag = document.createElement('div');
+            const checkPw = new RegExp(checkPwReg);
+            if (checkPw.test(pw)) {
                 resultPwTag.textContent = '사용할 수 있는 비밀번호 입니다.';
                 resultPwTag.classList.add("text-success");
+                result_pw = true;
             } else {
                 resultPwTag.textContent = '사용할 수 없는 비밀번호 입니다.';
                 resultPwTag.classList.add("text-danger");
@@ -197,14 +203,16 @@
             document.getElementById("pw").parentElement.appendChild(resultPwTag);
         }
 
+        //비밀번호 확인
         if (!!document.getElementById("resPwCheck")) {
             document.getElementById("resPwCheck").remove();
         }
         if (pwCheck.length > 1) {
-            const resultPwCheckTag = document.createElement('p');
+            const resultPwCheckTag = document.createElement('div');
             if (pw === pwCheck) {
                 resultPwCheckTag.textContent = '비밀번호와 값이 같습니다.';
                 resultPwCheckTag.classList.add("text-success");
+                result_pwCheck = true;
             } else {
                 resultPwCheckTag.textContent = '비밀번호와 값이 다릅니다.';
                 resultPwCheckTag.classList.add("text-danger");
@@ -212,9 +220,39 @@
             resultPwCheckTag.id = "resPwCheck";
             document.getElementById("pwCheck").parentElement.appendChild(resultPwCheckTag);
         }
+
+        if (result_pw && result_pwCheck) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    /**
+     *  전송 전에 form text 확인하기
+     */
+    function checkForm() {
+        const checkIdRes = document.getElementById("resid").textContent;
+        const checkEmailRes = document.getElementById("resemail").textContent;
+
+
+        if(checkIdRes != '1'){
+            alert("아이디가 규칙에 맞지 않습니다.");
+            return false
+        }
+        if(!checkPw()){
+            alert("비밀번호가 규칙에 맞지 않습니다.");
+            return false
+        }
+        if(checkEmailRes != '1'){
+            alert("이메일이 규칙에 맞지 않습니다.");
+            return false
+        }
+        return true;
     }
 
 </script>
+<script src="/js/common/checkReg.js"></script>
 <!-- End custom js for this page-->
 
 </body>
