--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -35,7 +35,9 @@
         <input type="text" class="form-control form-control-lg" id="pwCheck" placeholder="비밀번호 확인" required>
     </div>
     <div class="form-group">
-        <label for="name">이름</label>
+        <label for="name">
+            <div class="badge  badge-warning">필수</div>
+            이름</label>
         <input type="text" class="form-control form-control-lg" th:errorclass="is-invalid" th:field="*{name}" placeholder="이름">
     </div>
     <div class="form-group">
