임시 메인페이지 추가 및 thymeleaf에서 로그인 여부 확인으로 nav 동적으로 변경되게

--- a/src/main/resources/templates/partials/layoutMain.html
+++ b/src/main/resources/templates/partials/layoutMain.html
@@ -80,17 +80,7 @@
                         <img src="/template/images/faces/face28.jpg" alt="profile"/>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                        <th:block th:if="${#session.getAttribute('userId')} != null">
-                        <a class="dropdown-item" href="/user/mypage.do">
-                            <i class="ti-settings text-primary"></i>
-                            마이페이지
-                        </a>
-                        <a class="dropdown-item" href="/login/logout.do">
-                            <i class="ti-power-off text-primary"></i>
-                            로그아웃
-                        </a>
-                        </th:block>
-                        <th:block th:if="${#session.getAttribute('userId')} == null">
+                        <th:block th:if="${session['userId'] == null}">
                             <a class="dropdown-item" href="/join/form.do">
                                 <i class="ti-settings text-primary"></i>
                                 회원가입
@@ -99,6 +89,16 @@
                                 <i class="ti-power-off text-primary"></i>
                                 로그인
                             </a>
+                        </th:block>
+                        <th:block th:if="${session['userId'] != null}">
+                        <a class="dropdown-item" href="/user/mypage.do">
+                            <i class="ti-settings text-primary"></i>
+                            마이페이지
+                        </a>
+                        <a class="dropdown-item" href="/login/logout.do">
+                            <i class="ti-power-off text-primary"></i>
+                            로그아웃
+                        </a>
                         </th:block>
                     </div>
                 </li>
